io-hotmoka-examples/src/main/java/io/hotmoka/tests/errors/inconsistentredpayable1/Super.java
package io.hotmoka.tests.errors.inconsistentredpayable1;

import io.takamaka.code.lang.Contract;
import io.takamaka.code.lang.FromContract;
import io.takamaka.code.lang.RedPayable;

public class Super extends Contract {
	public @RedPayable @FromContract void m() {}
}